@@ -1,7 +1,10 @@
-spotpython 0.18.5:
+spotpython 0.18.6:
 
 - split.py:
-    computation fixed
+    New function: compute_lengths_from_fractions()
+
+- lightdatamodule.py:
+    train, val, test set computaion updated
 
 spotpython 0.18.4:
 
